# aprl-core

./: .gitignore  README.md  pyproject.toml
aprl/appareil/: __init__.py
aprl/experimental/: depinject.py
aprl/module/: __init__.py
aprl/part/: __init__.py
aprl/pipeline/: __init__.py
aprl/utils/: __init__.py  run.py  run_recipe.py
