[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "aprl"
dynamic = ['version']
dependencies = ["hydra-zen", "toolz"]

[project.urls]
Repository = "https://github.com/quentinf00/aprl-core.git"


[project.scripts]
aprl_run = "aprl.utils.run:aprl_run"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "aprl.__version__"}
